--- a/iOSApplication/makemitBGController/makemitBGcontroller/Info.plist
+++ b/iOSApplication/makemitBGController/makemitBGcontroller/Info.plist
@@ -19,9 +19,11 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This app needs to send updates to a Bluetooth-enabled pump system.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
